--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
+NODE_ENV=development
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/task-colab
-JWT_SECRET=
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRES_IN=7d
+BCRYPT_SALT_ROUNDS=12
