--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.3",
+    "multer": "^2.0.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
