--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-oauth/google": "^0.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "^16.0.0",
     "react": "^19.0.0",
